--- a/style.css
+++ b/style.css
@@ -25,10 +25,12 @@ body {
     width: 300px;
     position: relative;
     transform: scale(1);
+    visibility: hidden;
 }
 
 .circle {
     background-color: #010f1c;
+    opacity: 0.7;
     height: 100%;
     width: 100%;
     border-radius: 50%;
@@ -36,22 +38,6 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
-}
-
-.gradient-circle {
-    background: conic-gradient(#55b7a4 0%,
-            #4ca493 40%,
-            #fff 40%,
-            #fff 60%,
-            #336d62 60%,
-            #2a5b52 100%);
-    height: 320px;
-    width: 320px;
-    z-index: -2;
-    border-radius: 50%;
-    position: absolute;
-    top: -10px;
-    left: -10px;
 }
 
 .pointer {
@@ -170,4 +156,53 @@ body {
 
 #title {
     z-index: 1;
+}
+
+#text {
+    font-size: 2rem;
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        width: 250px;
+        height: 250px;
+    }
+
+    .pointer-container {
+        position: absolute;
+        top: -70px;
+        left: 115px;
+        width: 20px;
+        height: 190px;
+        animation: rotate 7.5s linear forwards infinite;
+        transform-origin: bottom center;
+    }
+
+    .container.grow {
+        animation: grow 3s linear forwards;
+    }
+
+    @keyframes grow {
+        from {
+            transform: scale(.5);
+        }
+
+        to {
+            transform: scale(.7);
+        }
+    }
+
+    .container.shrink {
+        animation: shrink 3s linear forwards;
+    }
+
+    @keyframes shrink {
+        from {
+            transform: scale(.7);
+        }
+
+        to {
+            transform: scale(.5);
+        }
+    }
 }
