--- a/style.css
+++ b/style.css
@@ -1,42 +1,42 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    color: #fff;
-    font-family: 'Montserrat', sans-serif;
-    min-height: 100vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  min-height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    height: 300px;
-    width: 300px;
-    position: relative;
-    transform: scale(1);
-    visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  height: 300px;
+  width: 300px;
+  position: relative;
+  transform: scale(1);
+  visibility: hidden;
 }
 
 .circle {
-    background-color: #010f1c;
-    opacity: 0.7;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+  background-color: #010f1c;
+  opacity: 0.7;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /*.pointer {
@@ -48,165 +48,188 @@ body {
 }*/
 
 .pointer-container {
+  position: absolute;
+  top: -40px;
+  left: 140px;
+  width: 20px;
+  height: 190px;
+  animation: rotate 7.5s linear forwards infinite;
+  transform-origin: bottom center;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.container.grow {
+  animation: grow 5s linear forwards;
+}
+
+@keyframes grow {
+  from {
+    transform: scale(0.8);
+  }
+
+  to {
+    transform: scale(1.2);
+  }
+}
+
+.container.shrink {
+  animation: shrink 5s linear forwards;
+}
+
+@keyframes shrink {
+  from {
+    transform: scale(1.2);
+  }
+
+  to {
+    transform: scale(0.8);
+  }
+}
+
+.music-container {
+  background-color: #fafafa;
+  opacity: 0.4;
+  border-radius: 15px;
+  box-shadow: 5px 5px 7px 1px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  position: relative;
+}
+
+.music-container:hover {
+  opacity: 0.7;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  color: #61677c;
+  border-radius: 15px;
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+  width: 100%;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  padding: 7px;
+}
+
+.action-btn {
+  background-color: #fff;
+  border: 0;
+  color: #dfdbdf;
+  font-size: 15px;
+  cursor: pointer;
+  padding: 10px;
+  margin: 0 15px;
+}
+
+.action-btn.action-btn-big {
+  color: #cdc2d0;
+  font-size: 20px;
+}
+
+.action-btn:focus {
+  outline: 0;
+}
+
+#icon {
+  color: #fafafa;
+}
+
+.action-btn {
+  background-color: #fafafa;
+}
+
+#video-bg {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+#title {
+  z-index: 1;
+}
+
+#text {
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    width: 250px;
+    height: 250px;
+  }
+
+  .pointer-container {
     position: absolute;
-    top: -40px;
-    left: 140px;
+    top: -70px;
+    left: 115px;
     width: 20px;
     height: 190px;
     animation: rotate 7.5s linear forwards infinite;
     transform-origin: bottom center;
-}
+  }
 
-@keyframes rotate {
+  .container.grow {
+    animation: grow 3s linear forwards;
+  }
+
+  @keyframes grow {
     from {
-        transform: rotate(0deg);
+      transform: scale(0.5);
     }
 
     to {
-        transform: rotate(360deg);
+      transform: scale(0.7);
     }
-}
+  }
 
-.container.grow {
-    animation: grow 5s linear forwards;
-}
+  .container.shrink {
+    animation: shrink 3s linear forwards;
+  }
 
-@keyframes grow {
+  @keyframes shrink {
     from {
-        transform: scale(.8);
+      transform: scale(0.7);
     }
 
     to {
-        transform: scale(1.2);
+      transform: scale(0.5);
     }
+  }
 }
 
-.container.shrink {
-    animation: shrink 5s linear forwards;
-}
-
-@keyframes shrink {
-    from {
-        transform: scale(1.2);
-    }
-
-    to {
-        transform: scale(.8);
-    }
-}
-
-.music-container {
-    background-color: #fafafa;
-    opacity: 0.4;
-    border-radius: 15px;
-    box-shadow: 5px 5px 7px 1px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    position: relative;
-}
-
-.music-container:hover {
-    opacity: 0.7;
-}
-
-.navigation {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-    color: #61677C;
-    border-radius: 15px;
-    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #fff;
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    padding: 7px;
-}
-
-.action-btn {
-    background-color: #fff;
-    border: 0;
-    color: #dfdbdf;
-    font-size: 15px;
-    cursor: pointer;
-    padding: 10px;
-    margin: 0 15px;
-}
-
-.action-btn.action-btn-big {
-    color: #cdc2d0;
-    font-size: 20px;
-}
-
-.action-btn:focus {
-    outline: 0;
-}
-
-#icon {
-    color: #fafafa;
-}
-
-.action-btn {
-    background-color: #fafafa;
-}
-
-#video-bg {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-#title {
-    z-index: 1;
-}
-
-#text {
-    font-size: 2rem;
-}
-
-@media screen and (max-width: 800px) {
-
-    .container {
-        width: 250px;
-        height: 250px;
-    }
-
-    .pointer-container {
-        position: absolute;
-        top: -70px;
-        left: 115px;
-        width: 20px;
-        height: 190px;
-        animation: rotate 7.5s linear forwards infinite;
-        transform-origin: bottom center;
-    }
-
-    .container.grow {
-        animation: grow 3s linear forwards;
-    }
-
-    @keyframes grow {
-        from {
-            transform: scale(.5);
-        }
-
-        to {
-            transform: scale(.7);
-        }
-    }
-
-    .container.shrink {
-        animation: shrink 3s linear forwards;
-    }
-
-    @keyframes shrink {
-        from {
-            transform: scale(.7);
-        }
-
-        to {
-            transform: scale(.5);
-        }
-    }
+.select-css {
+  display: block;
+  text-align: center;
+  color: #61677c;
+  line-height: 1.3;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
 }
