--- a/style.css
+++ b/style.css
@@ -233,3 +233,9 @@ body {
   background-position: right 0.7em top 50%, 0 0;
   background-size: 0.65em auto, 100%;
 }
+
+#countdownTime {
+  color: #61677c;
+  text-align: center;
+  font-size: small;
+}
