--- a/style.css
+++ b/style.css
@@ -39,24 +39,6 @@ body {
   z-index: -1;
 }
 
-/*.pointer {
-    background-color: #fff;
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    display: block;
-}*/
-
-.pointer-container {
-  position: absolute;
-  top: -40px;
-  left: 140px;
-  width: 20px;
-  height: 190px;
-  animation: rotate 7.5s linear forwards infinite;
-  transform-origin: bottom center;
-}
-
 @keyframes rotate {
   from {
     transform: rotate(0deg);
@@ -127,7 +109,7 @@ body {
   border: 0;
   color: #dfdbdf;
   font-size: 15px;
-  cursor: pointer;
+  cursor: circleContent;
   padding: 10px;
   margin: 0 15px;
 }
@@ -159,6 +141,7 @@ body {
 
 #title {
   z-index: 1;
+  opacity: 0.7;
 }
 
 #text {
@@ -171,7 +154,7 @@ body {
     height: 250px;
   }
 
-  .pointer-container {
+  .circleContent-container {
     position: absolute;
     top: -70px;
     left: 115px;
@@ -238,4 +221,5 @@ body {
   color: #61677c;
   text-align: center;
   font-size: small;
+  margin-top: 5px;
 }
